--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* Disable dark mode for now */
+/* @custom-variant dark (&:is(.dark *)); */
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
